other small corrections

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 
 
 * {
-    box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
+    box-sizing: border-box;
     margin: 0; 
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
 }
@@ -124,10 +124,11 @@ a {
 
 /* Skills and language sections starts here */
 
-.sidebar-skills-section {
+.sidebar ul {
   margin: 2vh 3vw;
+  padding: 0;
 }
-.sidebar-skills-section li {
+.sidebar li {
   list-style-type: none;
   margin: .5rem auto .5rem auto;
 }
@@ -145,19 +146,19 @@ a {
 	float: left;
 	background-color: #2187e7;
 }
-.sidebar-skills-section .html { /*set skills and animation of html*/
+.sidebar .html { /*set skills and animation of html*/
 	width: 95%;
 	animation: html 2s;
 }
-.sidebar-skills-section .css{ /*set skills and animation of css*/
+.sidebar .css{ /*set skills and animation of css*/
 	width: 85%;
 	animation: css 2s;
 }
-.sidebar-skills-section .javascript{ /*set skills and animation of javascript*/
+.sidebar .javascript{ /*set skills and animation of javascript*/
 	width: 10%;
 	animation: javascript 2s;
 }
-.sidebar-skills-section .bootstrap { /*set skills and animation of bootstrap*/
+.sidebar .bootstrap { /*set skills and animation of bootstrap*/
   width: 65%;
   animation: bootstrap 2s;
 }
@@ -212,15 +213,15 @@ a {
 
 /* Languages section */
 
-.sidebar-skills-section .romanian{ /*set skills and animation of RO_Lang*/
+.sidebar .romanian{ /*set skills and animation of RO_Lang*/
 	width: 100%;
 	animation: romanian 2s;
 }
-.sidebar-skills-section .english { /*set skills and animation of EN_Lang*/
+.sidebar .english { /*set skills and animation of EN_Lang*/
 	width: 100%;
 	animation: english 2s;
 }
-.sidebar-skills-section .german { /*set skills and animation of DE_Lang*/
+.sidebar .german { /*set skills and animation of DE_Lang*/
 	width: 10%;
 	animation: german 2s;
 }
