--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ a {
 .contact-container:hover {
   transform: scale(1.5, 1.5);
   transition: all 0.5s;
+  cursor: pointer;
 }
 .sidebar .icons-style {
   font-size: 1.87rem;
@@ -155,7 +156,7 @@ a {
 	animation: css 2s;
 }
 .sidebar .javascript{ /*set skills and animation of javascript*/
-	width: 80%;
+	width: 85%;
 	animation: javascript 2s;
 }
 .sidebar .bootstrap { /*set skills and animation of bootstrap*/
@@ -188,7 +189,7 @@ a {
 	}
 
 	100%{
-		width: 10%;
+		width: 85%;
 	}
 }
 @keyframes bootstrap{ /*animate bootstrap skills*/
